<resources>
    <string name="about_android">%1$s Android App</string>
    <string name="about_version">version %1$s</string>
    <string name="actionbar_sync">Refresh account</string>
    <string name="actionbar_upload">Upload</string>
    <string name="actionbar_upload_from_apps">Content from other apps</string>
    <string name="actionbar_upload_files">Files</string>
    <string name="actionbar_open_with">Open with</string>
    <string name="actionbar_mkdir">New folder</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_see_details">Details</string>
    <string name="actionbar_send_file">Send</string>
    <string name="actionbar_sort">Sort</string>
    <string name="actionbar_sort_title">Sort by</string>
    <string name="actionbar_search">Search</string>
    <string-array name="actionbar_sortby">
    	<item>A-Z</item>
    	<item>Newest - Oldest</item>
    	
    </string-array>
    <string name="drawer_item_all_files">All files</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_logs">Logs</string>
	<string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_more">More</string>
    <string name="prefs_accounts">Accounts</string>
    <string name="prefs_manage_accounts">Manage Accounts</string>
    <string name="prefs_passcode">Passcode lock</string>
    <string name="prefs_instant_upload">Instant picture uploads</string>
    <string name="prefs_instant_upload_summary">Instantly upload pictures taken by camera</string>
    <string name="prefs_instant_video_upload">Instant video uploads</string>
    <string name="prefs_instant_video_upload_summary">Instantly upload videos recorded by camera</string>
    <string name="prefs_log_title">Enable Logging</string>
    <string name="prefs_log_summary">This is used to log problems</string>
    <string name="prefs_log_title_history">Logging History</string>
    <string name="prefs_log_summary_history">This shows the recorded logs</string>
    <string name="prefs_log_delete_history_button">Delete History</string>
    <string name="prefs_help">Help</string>
    <string name="prefs_recommend">Recommend to a friend</string>
    <string name="prefs_feedback">Feedback</string>
    <string name="prefs_imprint">Imprint</string>
    <string name="prefs_remember_last_share_location">Remember share location</string>
    <string name="prefs_remember_last_upload_location_summary">Remember last share upload location</string>
	<string name="recommend_subject">"Try %1$s on your smartphone!"</string>
	<string name="recommend_text">"I want to invite you to use %1$s on your smartphone!\nDownload here: %2$s"</string>
    <string name="auth_check_server">Check Server</string>
    <string name="auth_host_url">Server address https://…</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_register">New to %1$s?</string>
    <string name="sync_string_files">Files</string>
    <string name="setup_btn_connect">Connect</string>
    <string name="uploader_btn_upload_text">Upload</string>
    <string name="uploader_btn_new_folder_text">New folder</string>
    <string name="uploader_top_message">Choose upload folder:</string>
    <string name="uploader_wrn_no_account_title">No account found</string>
    <string name="uploader_wrn_no_account_text">There are no %1$s accounts on your device. Please setup an account first.</string>
    <string name="uploader_wrn_no_account_setup_btn_text">Setup</string>
    <string name="uploader_wrn_no_account_quit_btn_text">Quit</string>
    <string name="uploader_wrn_no_content_title">No content to upload</string>
    <string name="uploader_wrn_no_content_text">No content was received. Nothing to upload.</string>
    <string name="uploader_error_forbidden_content">%1$s is not allowed to access the shared content</string>
    <string name="uploader_info_uploading">Uploading</string>
    <string name="file_list_seconds_ago">seconds ago</string>
    <string name="file_list_empty">Nothing in here. Upload something!</string>
    <string name="file_list_loading">Loading&#8230;</string>
    <string name="file_list_no_app_for_file_type">No App found for file type!</string>
    <string name="local_file_list_empty">There are no files in this folder.</string>
    <string name="filedetails_select_file">Tap on a file to display additional information.</string>
    <string name="filedetails_size">Size:</string>
    <string name="filedetails_type">Type:</string>
    <string name="filedetails_created">Created:</string>
    <string name="filedetails_modified">Modified:</string>
    <string name="filedetails_download">Download</string>
    <string name="filedetails_sync_file">Synchronize</string>
    <string name="filedetails_renamed_in_upload_msg">File was renamed to %1$s during upload</string>
    <string name="list_layout">List Layout</string>
    <string name="action_share">Share</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel_sync">Cancel synchronization</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_save_exit">Save &amp; Exit</string>
    <string name="common_error">Error</string>
    <string name="common_loading">Loading &#8230;</string>
    <string name="common_error_unknown">Unknown error</string>
    <string name="about_title">About</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="create_account">Create account</string>
    <string name="upload_chooser_title">Upload from &#8230;</string>
    <string name="uploader_info_dirname">Folder name</string>
    <string name="uploader_upload_in_progress_ticker">Uploading &#8230;</string>
    <string name="uploader_upload_in_progress_content">%1$d%% Uploading %2$s</string>
    <string name="uploader_upload_succeeded_ticker">Upload succeeded</string>
    <string name="uploader_upload_succeeded_content_single">%1$s was successfully uploaded</string>
    <string name="uploader_upload_failed_ticker">Upload failed</string>
    <string name="uploader_upload_failed_content_single">Upload of %1$s could not be completed</string>
    <string name="uploader_upload_failed_credentials_error">Upload failed, you need to relogin</string>
    <string name="downloader_download_in_progress_ticker">Downloading &#8230;</string>
    <string name="downloader_download_in_progress_content">%1$d%% Downloading %2$s</string>
    <string name="downloader_download_succeeded_ticker">Download succeeded</string>
    <string name="downloader_download_succeeded_content">%1$s was successfully downloaded</string>
    <string name="downloader_download_failed_ticker">Download failed</string>
    <string name="downloader_download_failed_content">Download of %1$s could not be completed</string>
    <string name="downloader_not_downloaded_yet">Not downloaded yet</string>
    <string name="downloader_download_failed_credentials_error">Download failed, you need to relogin</string>
    <string name="common_choose_account">Choose account</string>
    <string name="sync_fail_ticker">Synchronization failed</string>
    <string name="sync_fail_ticker_unauthorized">Synchronization failed, you need to relogin</string>
    <string name="sync_fail_content">Synchronization of %1$s could not be completed</string>
    <string name="sync_fail_content_unauthorized">Invalid password for %1$s</string>
    <string name="sync_conflicts_in_favourites_ticker">Conflicts found</string>
    <string name="sync_conflicts_in_favourites_content">%1$d kept-in-sync files could not be sync\'ed</string>
    <string name="sync_fail_in_favourites_ticker">Kept-in-sync files failed</string>
    <string name="sync_fail_in_favourites_content">Contents of %1$d files could not be sync\'ed (%2$d conflicts)</string>
    <string name="sync_foreign_files_forgotten_ticker">Some local files were forgotten</string>
    <string name="sync_foreign_files_forgotten_content">%1$d files out of the %2$s folder could not be copied into</string>
    <string name="sync_foreign_files_forgotten_explanation">As of version 1.3.16, files uploaded from this device are copied into the local %1$s folder to prevent data loss when a single file is synced with multiple accounts.\n\nDue to this change, all files uploaded in previous versions of this app were copied into the %2$s folder. However, an error prevented the completion of this operation during account synchronization. You may either leave the file(s) as is and remove the link to %3$s, or move the file(s) into the %1$s folder and retain the link to %4$s.\n\nListed below are the local file(s), and the remote file(s) in %5$s they were linked to.</string>
    <string name="sync_current_folder_was_removed">Folder %1$s does not exist anymore</string>
    <string name="foreign_files_move">"Move all"</string>
    <string name="foreign_files_success">"All files were moved"</string>
    <string name="foreign_files_fail">"Some files could not be moved"</string>
    <string name="foreign_files_local_text">"Local: %1$s"</string>
    <string name="foreign_files_remote_text">"Remote: %1$s"</string>
    <string name="upload_query_move_foreign_files">There is not space enough to copy the selected files into the %1$s folder. Would you like to move them instead? </string>
    <string name="pass_code_enter_pass_code">Please, insert your passcode</string>
    <string name="pass_code_configure_your_pass_code">Enter your passcode</string>
    <string name="pass_code_configure_your_pass_code_explanation">The passcode will be requested every time the app is started</string>
    <string name="pass_code_reenter_your_pass_code">Please, reenter your passcode</string>
    <string name="pass_code_remove_your_pass_code">Remove your passcode</string>
    <string name="pass_code_mismatch">The passcodes are not the same</string>
    <string name="pass_code_wrong">Incorrect passcode</string>
    <string name="pass_code_removed">Passcode removed</string>
    <string name="pass_code_stored">Passcode stored</string>
    <string name="media_notif_ticker">"%1$s music player"</string>
    <string name="media_state_playing">"%1$s (playing)"</string>
    <string name="media_state_loading">"%1$s (loading)"</string>
    <string name="media_event_done">"%1$s playback finished"</string>
    <string name="media_err_nothing_to_play">No media file found</string>
    <string name="media_err_no_account">No account provided</string>
    <string name="media_err_not_in_owncloud">File not in a valid account</string>
    <string name="media_err_unsupported">Unsupported media codec</string>
    <string name="media_err_io">Media file could not be read</string>
    <string name="media_err_malformed">Media file not correctly encoded</string>
    <string name="media_err_timeout">Timed out while trying to play</string>
    <string name="media_err_invalid_progressive_playback">Media file cannot be streamed</string>
    <string name="placeholder_filename">placeholder.txt</string>
    <string name="placeholder_filesize">389 KB</string>
    <string name="share_with_user_section_title">Share with users and groups</string>
    <string name="share_no_users">No data shared with users yet</string>
    <string name="share_add_user_or_group">Add User or Group</string>
    <string name="share_via_link_section_title">Share link</string>
    <string name="share_via_link_expiration_date_label">Set expiration date</string>
    <string name="share_via_link_password_label">Password protect</string>
    <string name="share_via_link_password_title">Secured</string>
    <string name="share_get_public_link_button">Get link</string>
</resources>