<?xml version="1.0" encoding="utf-8"?><!--
  ownCloud Android client application

  Copyright (C) 2012  Bartek Przybylski
  Copyright (C) 2015 ownCloud Inc.

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License version 2,
  as published by the Free Software Foundation.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_content">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_containing_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <com.synox.android.widgets.CustomRecyclerView
                android:id="@+id/list_root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:visibility="visible" />


        </android.support.v4.widget.SwipeRefreshLayout>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            fab:menu_animationDelayPerItem="50"
            fab:menu_colorNormal="@color/synox_blue"
            fab:menu_colorPressed="@color/synox_blue_accent"
            fab:menu_colorRipple="@color/synox_blue_bright"
            fab:menu_fab_hide_animation="@anim/hide_to_bottom"
            fab:menu_fab_show_animation="@anim/show_from_bottom"
            fab:menu_labels_colorNormal="@color/synox_blue"
            fab:menu_labels_colorPressed="@color/synox_blue_accent"
            fab:menu_labels_colorRipple="@color/synox_blue_bright"
            fab:menu_labels_hideAnimation="@anim/jump_to_down"
            fab:menu_labels_showAnimation="@anim/jump_from_down"
            fab:menu_labels_textColor="@android:color/white"
            fab:menu_shadowColor="#66000000"
            fab:menu_showShadow="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_file_add"
                fab:fab_colorNormal="@color/synox_blue"
                fab:fab_colorPressed="@color/synox_blue_accent"
                fab:fab_colorRipple="@color/synox_blue_bright"
                fab:fab_label="@string/actionbar_upload"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_folder_add"
                fab:fab_colorNormal="@color/synox_blue"
                fab:fab_colorPressed="@color/synox_blue_accent"
                fab:fab_colorRipple="@color/synox_blue_bright"
                fab:fab_label="@string/actionbar_mkdir"
                fab:fab_size="mini" />

        </com.github.clans.fab.FloatingActionMenu>

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/file_list_empty"
            android:textColor="@color/divider"
            android:textStyle="bold|italic"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>